--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_custom_clippers: ^1.1.2
   flutter_svg: ^0.21.0+1
   provider: ^5.0.0
+  flushbar: ^1.10.4
 
 dev_dependencies:
   flutter_test:
